chore:> package script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/services/inventory.js\""
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/services/inventory.js\"",
+    "start": "node dist/services/inventory.js"
   },
   "keywords": [],
   "author": "",
