--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"tsc -w\" \"nodemon dist/services/inventory.js\"",
-    "start": "node dist/services/inventory.js"
+    "start": "node dist/services/inventory.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
